--- a/Arknights (Music).html
+++ b/Arknights (Music).html
@@ -15,7 +15,7 @@
     
         <nav class="site-nav">
             <ul>
-                <li> <a href=".html">Back to Homepage</a> </li>
+                <li> <a href="index.html">Back to Homepage</a> </li>
                 <li> <a href="Arknights (List of Operators).html">Go to List of Operators</a> </li>
                 <li> <a href="Arknights (Images).html">(Placeholder/Subject to Change)</a> </li>
             </ul>
